Time Table Builder Work
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Period.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Period.orm.yml
@@ -25,6 +25,8 @@ Busybee\TimeTableBundle\Entity\Period:
             type: time
         end:
             type: time
+        break:
+            type: boolean
         lastModified:
             type: datetime
         createdOn:
