--- a/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
@@ -17,3 +17,8 @@ Busybee\StudentBundle\Entity\Activity:
         year:
             - Valid: ~
             - NotBlank: ~
+        teachingLoad:
+            - Busybee\FormBundle\Validator\Integer: ~
+            - Range:
+                min: 0
+                max: 99
