End of Day 15th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -58,3 +58,6 @@ timetable_builder:
 period_builder_line:
     path:     /plan/{id}/{line}/builder/activities/
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:addLineToPeriod }
+period_builder_activity:
+    path:     /plan/{id}/{activity}/builder/activity/
+    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:addActivityToPeriod }
