--- a/src/Busybee/TimeTableBundle/Resources/config/validation/Line.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/Line.yml
@@ -13,6 +13,7 @@ Busybee\TimeTableBundle\Entity\Line:
             - NotBlank: ~
         nameShort:
             - NotBlank: ~
+            - Busybee\FormBundle\Validator\NoWhiteSpace: ~
         year:
             - Valid: ~
             - NotBlank: ~
