--- a/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
@@ -14,6 +14,7 @@ Busybee\StudentBundle\Entity\Activity:
             - NotBlank: ~
         nameShort:
             - NotBlank: ~
+            - Busybee\FormBundle\Validator\NoWhiteSpace: ~
         year:
             - Valid: ~
             - NotBlank: ~
