Work on limiting testing on Grades in the timetable.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -190,3 +190,8 @@ services:
         factory:
             - '@current.year'
             - 'getCurrentYear'
+    grade.manager:
+        class: Busybee\InstituteBundle\Model\GradeManager
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@current.year.currentYear'
