Composer Update TimeTable Grade Control
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -64,3 +64,6 @@ period_builder_activity:
 line_delete:
     path:     /line/{id}/delete/
     defaults: { _controller: BusybeeTimeTableBundle:Line:delete }
+grade_control:
+    path:     /grade/{grade}/control/
+    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:gradeControl }
