End of Day 20th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -67,3 +67,6 @@ line_delete:
 grade_control:
     path:     /grade/{grade}/control/
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:gradeControl }
+timetable_display:
+    path:     /{identifier}/display/
+    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:display }
