End of Day 21st June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -185,6 +185,7 @@ services:
         arguments:
             - '@busybee_security.user_manager'
             - '@security.token_storage'
+            - '@year.repository'
     current.year.currentYear:
         class: Busybee\InstituteBundle\Model\CurrentYear
         factory:
