Display Timetable with Control (Only Grades done.)
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -69,4 +69,4 @@ grade_control:
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:gradeControl }
 timetable_display:
     path:     /{identifier}/display/{displayDate}/
-    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:display, displayDate: 'now' }
+    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:display, displayDate: 'today' }
