End of Day 30th Jun 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SecurityBundle/Resources/config/services.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/services.yml
@@ -234,3 +234,7 @@ services:
             - '@busybee_security.user_manager'
         tags:
             - { name: twig.extension }
+    voter.details:
+        class: Busybee\SecurityBundle\Security\VoterDetails
+        arguments:
+            - '@doctrine.orm.entity_manager'
