--- a/src/Busybee/StaffBundle/Resources/config/services.yml
+++ b/src/Busybee/StaffBundle/Resources/config/services.yml
@@ -59,3 +59,11 @@ services:
         tags:
             - { name: security.voter, priority: 250 }
         public: false
+    staff.student.voter:
+        class: Busybee\StaffBundle\Security\StudentVoter
+        arguments:
+            - '@security.access.decision_manager'
+            - '@person.manager'
+        tags:
+            - { name: security.voter, priority: 250 }
+        public: false
