TimeTable Display Student
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
@@ -11,6 +11,10 @@ Busybee\InstituteBundle\Entity\Grade:
         grade:
             type: string
             length: '8'
+        name:
+            type: string
+            length: '24'
+            nullable: true
         sequence:
             type: integer
             length: 2
