--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Year.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Year.orm.yml
@@ -1,6 +1,6 @@
 Busybee\InstituteBundle\Entity\Year:
     type: entity
-    table: calendar_year
+    table: calendar
     repositoryClass: Busybee\InstituteBundle\Repository\YearRepository
     id:
         id:
