further Pagination Debug
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_02.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_02.yml
@@ -11,12 +11,12 @@ Address.ListLabel:
 Person.GenderList:
     type: 'array'
     displayName: 'Gender List'
-    description: ''
+    description: 'A list of genders used in the system.'
     role: 'ROLE_REGISTRAR'
 Person.TitleList:
     type: 'array'
     displayName: 'List of Titles'
-    description: ''
+    description: 'List of personal titles used in the system.'
     role: 'ROLE_REGISTRAR'
 Address.TerritoryList:
     type: 'array'
